<resources>
    <string name="app_name">budget buddy</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="dashboard">DashBoard</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login_title">Wellcome Back</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="budget_buddy">Budget Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="note">NOTE:</string>
    <string name="amount">AMOUNT:</string>
    <string name="type">TYPE:</string>
    <string name="_000_00">000.00</string>
</resources>