<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Copyright 2020 kimy csjs
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/dashboard_menu"/>

    <item android:id="@+id/income"
        android:title="@string/income"
        android:icon="@drawable/income_budy"/>

    <item android:id="@+id/expense"
        android:title="@string/expense"
        android:icon="@drawable/expence_budy"/>

</menu>