<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:background="@drawable/edit_text_background"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:id="@+id/reg_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:background="@drawable/edit_text_background"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:id="@+id/reg_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:id="@+id/btn_register"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/sign_in"
                android:padding="5dp"
                android:id="@+id/sign_up_reg"/>

        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>